# # To publish into PyPi
# # On a virtual environment with Python 3.8:
# # pip install --upgrade pip
# # pip install --upgrade build
# # pip install --upgrade twine
# # python -m build
# # twine upload dist/{name}-{version}*
# #   username: __token__
# #   password: <your_token_here>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalake_utils"
version = "2.2.1"
authors = [
  {name="Luis Roberto de Oliveira Moro", email="luis.moro@yuca.live"},
]
description = "Manipulate data on Amazon S3 using Apache Hadoop filesystem compability"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
    ]
dependencies = [
    "boto3",
    "pandas",
    "pyarrow",
    "fsspec",
    "s3fs",
]

[project.urls]
"Homepage" = "https://github.com/yuca-live/yuca-datalake-utils"